# RuView

./: README.md  nexmon_setp.sh
data/recordings/: csi-1776816511.csi.jsonl  csi-1776816677.csi.jsonl
deploy/pi/: install.sh
deploy/pi/systemd/: ruview-pi-agent.service  ruview-sensing-server.service
docs/: nexmon-pi-startup-scripts.md  nexmon-setup-guide.md  pi-deployment-guide.md  user-guide.md
docs/adr/: ADR-090-pi-protocol-parity.md
docs/superpowers/plans/: 2026-04-22-raspberry-pi-full-feature-parity.md
plans/ui-redesign-2026-04-22/: 3d-view-research-notes.md  pretext-research-notes.md  redesign-implementation-plan.md  ui-review-draft.md  user-prompt-verification.md
rust-port/wifi-densepose-rs/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/: Cargo.toml  (+3 more)
rust-port/wifi-densepose-rs/crates/wifi-densepose-pi-node-agent/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-pi-node-agent/src/: config.rs  edge_dsp.rs  frame_encoder.rs  lib.rs  main.rs  mmwave.rs  nexmon_capture.rs  wasm_runtime.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-pi-node-agent/tests/: agent_pipeline_test.rs  perf_smoke_test.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-protocol/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-protocol/src/: lib.rs
scripts/: nexmon_setup_auto.sh  nexmon_to_ruview_bridge.py
scripts/pi/: setup_nexmon_csi_pi4.sh  start_nexmon_bridge.sh
scripts/windows/: start_ruview_server.ps1
ui/: observatory.html
ui/mobile/: package-lock.json
ui/observatory/js/: hud-controller.js  main.js
(+73 files in other folders)
