[package]
name = "wifi-densepose-protocol"
version = "0.3.0"
edition = "2021"
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
description = "Shared protocol definitions for RuView sensing nodes and hubs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
bytes = "1.5"
tracing = "0.1"
